# free-llm-proxy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
qween/: README.md  settings.json
spec/: free-llm-proxy.md  verification.md
src/free_llm_proxy/: auth.py  config.py  deps.py  logging.py  main.py  metrics.py  models.py  refresher.py  registry.py  router.py  upstream.py
src/free_llm_proxy/api/: admin.py  chat.py  models_endpoint.py  ops.py
tests/: conftest.py  test_api_chat.py  test_api_models.py  test_api_ops.py  test_auth.py  test_live.py  test_metrics.py  test_refresher.py  test_registry.py  test_router.py  test_skeleton.py  test_upstream.py
tests/fixtures/: top-models.json
